Prevent address input from wrapping

--- a/src/path-to-hs/components/student-info-display/student-info-form.scss
+++ b/src/path-to-hs/components/student-info-display/student-info-form.scss
@@ -62,6 +62,9 @@
     }
   }
 }
+.field-group.nowrap {
+  flex-wrap: nowrap;
+}
 .field-group.distribute-left {
   justify-content: flex-start;
 }
